[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Scenes/SubOptions/Playlists/CustomPlaylist-s/NormalPlaylist/NormalPlaylistOptions.gd" type="Script" id=1]
[ext_resource path="res://src/Themes/Buttons/OptionButton.tres" type="StyleBox" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="NormalPlaylistOptions" type="VBoxContainer"]
margin_right = 168.0
margin_bottom = 304.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="TopEmpty" type="Control" parent="."]
margin_right = 176.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2

[node name="NormalPlaylistOptions" type="PanelContainer" parent="."]
margin_top = 108.0
margin_right = 176.0
margin_bottom = 319.0
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="NormalPlaylistOptions"]
margin_right = 176.0
margin_bottom = 211.0

[node name="LeftEmpty" type="Control" parent="NormalPlaylistOptions/HBoxContainer"]
margin_right = 5.0
margin_bottom = 211.0
rect_min_size = Vector2( 5, 0 )

[node name="OptionVBox" type="VBoxContainer" parent="NormalPlaylistOptions/HBoxContainer"]
margin_left = 13.0
margin_right = 163.0
margin_bottom = 211.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="TopBuffer" type="Control" parent="NormalPlaylistOptions/HBoxContainer/OptionVBox"]
margin_right = 150.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="SetPlaylistCover" type="Button" parent="NormalPlaylistOptions/HBoxContainer/OptionVBox"]
margin_top = 12.0
margin_right = 150.0
margin_bottom = 37.0
rect_min_size = Vector2( 150, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_styles/normal = ExtResource( 2 )
text = "Set PlaylistCover"

[node name="QueuePlaylist" type="Button" parent="NormalPlaylistOptions/HBoxContainer/OptionVBox"]
margin_top = 39.0
margin_right = 150.0
margin_bottom = 64.0
rect_min_size = Vector2( 150, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_styles/normal = ExtResource( 2 )
text = "Queue Playlist"

[node name="Rename" type="Button" parent="NormalPlaylistOptions/HBoxContainer/OptionVBox"]
margin_top = 66.0
margin_right = 150.0
margin_bottom = 91.0
rect_min_size = Vector2( 150, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_styles/normal = ExtResource( 2 )
text = "Rename"

[node name="Export" type="Button" parent="NormalPlaylistOptions/HBoxContainer/OptionVBox"]
margin_top = 93.0
margin_right = 150.0
margin_bottom = 118.0
rect_min_size = Vector2( 150, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_styles/normal = ExtResource( 2 )
text = "Export"

[node name="DeletePlaylist" type="Button" parent="NormalPlaylistOptions/HBoxContainer/OptionVBox"]
margin_top = 120.0
margin_right = 150.0
margin_bottom = 145.0
rect_min_size = Vector2( 150, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_styles/normal = ExtResource( 2 )
text = "Delete"

[node name="ToPlaylists" type="Button" parent="NormalPlaylistOptions/HBoxContainer/OptionVBox"]
margin_top = 147.0
margin_right = 150.0
margin_bottom = 172.0
rect_min_size = Vector2( 150, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_styles/normal = ExtResource( 2 )
text = "To Playlists"

[node name="Close" type="Button" parent="NormalPlaylistOptions/HBoxContainer/OptionVBox"]
margin_top = 174.0
margin_right = 150.0
margin_bottom = 199.0
rect_min_size = Vector2( 150, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_styles/normal = ExtResource( 2 )
text = "Close"

[node name="BottomBuffer" type="Control" parent="NormalPlaylistOptions/HBoxContainer/OptionVBox"]
margin_top = 201.0
margin_right = 150.0
margin_bottom = 211.0
rect_min_size = Vector2( 0, 10 )

[node name="RightEmpty" type="Control" parent="NormalPlaylistOptions/HBoxContainer"]
margin_left = 171.0
margin_right = 176.0
margin_bottom = 211.0
rect_min_size = Vector2( 5, 0 )
